K8s-cluster/k8s-components/services/ingress/app-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1-deployment
spec:
  replicas: 3   # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: service1
  template:
    metadata:
      labels:
        app: service1
    spec:
      containers:
        - name: service1-container
          image: service1-image:latest  # Replace with the image for service1
          ports:
            - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2-deployment
spec:
  replicas: 3   # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
        - name: service2-container
          image: service2-image:latest  # Replace with the image for service2
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: service1-service
spec:
  type: ClusterIP
  selector:
    app: service1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: service2-service
spec:
  type: ClusterIP
  selector:
    app: service2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
