K8s-cluster/k8s-components/services/ingress/ingress-pathbased.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
spec:
  rules:
    - host: example.com   # Replace with your desired domain
      http:
        paths:
          - path: /service1
            pathType: Prefix
            backend:
              service:
                name: service1-service
                port:
                  number: 80
          - path: /service2
            pathType: Prefix
            backend:
              service:
                name: service2-service
                port:
                  number: 80
